# uns-chat-bot

./: .flake8  .gitignore  Dockerfile  DockerfileAPI  README.md  docker-compose.yaml  pyproject.toml  uns_snapshot.json
UnsSimulator/: Dockerfile  main.py  requirements.txt
UnsSimulator/test/api/: api_test.py
UnsSimulator/test/services/: __init__.py  logicservice_test.py  mainservice_test.py
UnsSimulator/unssimulatorservice/: __init__.py
UnsSimulator/unssimulatorservice/adapters/: sap.py
UnsSimulator/unssimulatorservice/api/: app.py  base.py  models.py  someapi.py
UnsSimulator/unssimulatorservice/models/: entities.py  internalmodel.py
UnsSimulator/unssimulatorservice/mqtt/: client.py  model.py  publisher.py
UnsSimulator/unssimulatorservice/persistence/: helpers.py  manager.py  migration.py
UnsSimulator/unssimulatorservice/services/: datasimulator.py  mainservice.py  update_service.py
UnsSimulator/unssimulatorservice/util/: metrics.py  settings.py
src/: mqtt_snapshot.json
src/backend/: api_server.py  chat_bot.py  models.py  mqtt_client.py  sub_chat.py  tools.py
src/config/: config.py  logger.py
src/frontend/: app.py  chat_client.py
src/mqtt/: client.py  listener.py  model.py
src/utils/: config.py
