[tool.poetry]
name = "uns-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.2"
langchain-core = "^0.2"
langchain-openai = "^0.1"
langgraph = "^0.1"
streamlit = "^1.36"
fastapi = "^0.111.1"
requests = "^2.32.3"
flake8 = "^7.1.0"
types-requests = "^2.32.0.20240712"
langchain-community = "^0.2.9"
colorlog = "^6.8.2"
paho-mqtt = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
